Fix cards are not spoiler-proof on Safari

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -804,6 +804,10 @@
       filter: contrast(0);
       background-color: #000;
     }
+    .title,
+    .meta {
+      background-color: currentColor;
+    }
     * {
       text-decoration-color: inherit;
       text-decoration-thickness: 1.5em;
